--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     </div>
     <header class="header">
         <a href="#" class="header-logo">
-            <img src="/images/logo.svg" alt="logo">
+            <img src="images/logo.svg" alt="logo">
         </a>
         <nav class="header-menu">
             <ul>
@@ -29,7 +29,7 @@
                 <li class="header-item br"><a href="#">Journal</a></li>
                 <li class="header-item"><a href="#">Search</a></li>
                 <li class="header-item br"><a href="#">Login</a></li>
-                <li class="header-item"><a href="#"><img src="/images/cart.svg" alt="cart"></a></li>
+                <li class="header-item"><a href="#"><img src="images/cart.svg" alt="cart"></a></li>
             </ul>
         </nav>
     </header>
@@ -57,49 +57,49 @@
             </nav>
             <div class="product-blog">
                 <div class="product-info">
-                    <img src="/images/product1.png" alt="product">
+                    <img src="images/product1.png" alt="product">
                     <p>Preorder - Analog Starter Kit</p>
                     <span>$98.00 </span>
                     <span>$79.00 </span>
                 </div>
                 <div class="product-info">
-                    <img src="/images/product2.png" alt="product">
+                    <img src="images/product2.png" alt="product">
                     <p>Preorder - Analog Starter Kit</p>
                     <span>$98.00 </span>
                     <span>$79.00 </span>
                 </div>
                 <div class="product-info">
-                    <img src="/images/product3.png" alt="product">
+                    <img src="images/product3.png" alt="product">
                     <p>Preorder - Analog Starter Kit</p>
                     <span>$98.00 </span>
                     <span>$79.00 </span>
                 </div>
                 <div class="product-info">
-                    <img src="/images/product4.png" alt="product">
+                    <img src="images/product4.png" alt="product">
                     <p>Preorder - Analog Starter Kit</p>
                     <span>$98.00 </span>
                     <span>$79.00 </span>
                 </div>
                 <div class="product-info">
-                    <img src="/images/product5.png" alt="product">
+                    <img src="images/product5.png" alt="product">
                     <p>Preorder - Analog Starter Kit</p>
                     <span>$98.00 </span>
                     <span>$79.00 </span>
                 </div>
                 <div class="product-info">
-                    <img src="/images/product6.png" alt="product">
+                    <img src="images/product6.png" alt="product">
                     <p>Preorder - Analog Starter Kit</p>
                     <span>$98.00 </span>
                     <span>$79.00 </span>
                 </div>
                 <div class="product-info">
-                    <img src="/images/product7.png" alt="product">
+                    <img src="images/product7.png" alt="product">
                     <p>Preorder - Analog Starter Kit</p>
                     <span>$98.00 </span>
                     <span>$79.00 </span>
                 </div>
                 <div class="product-info">
-                    <img src="/images/product8.png" alt="product">
+                    <img src="images/product8.png" alt="product">
                     <p>Preorder - Analog Starter Kit</p>
                     <span>$98.00 </span>
                     <span>$79.00 </span>
@@ -119,7 +119,7 @@
                     <a href="#">Shop the sale →</a>
                 </div>
                 <div class="sale-image">
-                    <img src="/images/sale.png" alt="sale">
+                    <img src="images/sale.png" alt="sale">
                 </div>
             </div>
         </div>
@@ -129,15 +129,15 @@
             <h3 class="category-heading">Our mission is to create simple, beautiful <br> objects that combine form and function.</h3>
             <div class="category-block">
                 <div class="category-item">
-                    <img src="/images/category1.png" alt="category1">
+                    <img src="images/category1.png" alt="category1">
                     <a href="#">Shop Men →</a>
                 </div>
                 <div class="category-item">
-                    <img src="/images/category2.png" alt="category2">
+                    <img src="images/category2.png" alt="category2">
                     <a href="#">Shop Women →</a>
                 </div>
                 <div class="category-item">
-                    <img src="/images/category3.png" alt="category3">
+                    <img src="images/category3.png" alt="category3">
                     <a href="#">Shop Objects →</a>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                     <a href="#">Shop Gather →</a>
                 </div>
                 <div class="sale-image">
-                    <img src="/images/sale2.png" alt="sale">
+                    <img src="images/sale2.png" alt="sale">
                 </div>
             </div>
         </div>
@@ -200,12 +200,12 @@
                             <p>© Ugmonk 2021</p>
                             <p>All images and content may not be <br> used without permission</p>
                         </div>
-                        <img src="/images/logo2.svg" alt="logo2">
+                        <img src="images/logo2.svg" alt="logo2">
                     </div>
                     <div class="footer-social">
-                        <a href=""><img src="/images/insta.svg" alt="insta"></a>
-                        <a href=""><img src="/images/twitter.svg" alt="twitter"></a>
-                        <a href=""><img src="/images/facebook.svg" alt="facebook"></a>
+                        <a href=""><img src="images/insta.svg" alt="insta"></a>
+                        <a href=""><img src="images/twitter.svg" alt="twitter"></a>
+                        <a href=""><img src="images/facebook.svg" alt="facebook"></a>
                     </div>
                 </div>
             </div>
